# formation_cpp

./: .gitmodules  CMakeLists.txt  README.md  extended_capture_in_lambdas.cpp  generic_lambdas.cpp  index.html  lambdas.cpp  relaxed_constexpr.cpp  template_variables.cpp
cmake/Modules/: EnableCXX11.cmake  External-Boost.cmake
practical/: CMakeLists.txt
practical/forma1/: CMakeLists.txt
practical/forma1/sess1/fibonacci/: CMakeLists.txt  test.cpp
practical/forma1/sess1/rpn/: CMakeLists.txt  rpn.cpp  test.cpp
practical/forma1/sess2/interpreter/: CMakeLists.txt  test.cpp
practical/forma1/sess2/matrix/: CMakeLists.txt  test.cpp
practical/forma1/sess3/: CMakeLists.txt  logic.cpp  logic.hpp  types.hpp
practical/forma1/sess3/console/: CMakeLists.txt
practical/forma1/sess3/tests/: CMakeLists.txt
practical/forma2/: CMakeLists.txt
practical/forma2/sess1/: CMakeLists.txt
practical/forma2/sess2/: CMakeLists.txt  practical.cpp
practical/forma3/: CMakeLists.txt
practical/forma3/sess1/: CMakeLists.txt  exo1.hpp  exo1_solution.hpp  exo2.hpp  exo2_solution.hpp  exo3.hpp  exo3_solution.hpp  exo4.hpp  exo4_solution.hpp  exo5.hpp  exo5_solution.hpp  exo6.hpp  exo6_solution.hpp  test_exo1.cpp  test_exo2.cpp  test_exo3.cpp  test_exo4.cpp  test_exo5.cpp  test_exo6.cpp
practical/forma3/sess2/: CMakeLists.txt  exo1.hpp  exo1_solution.hpp  exo2.hpp  exo2_solution.hpp  test_exo1.cpp  test_exo2.cpp
sessions/1/: content.md  index.html  slides.html
sessions/1/practical_cases/: CMakeLists.txt
sessions/1/practical_cases/fibonacci/: CMakeLists.txt  fibonacci.cpp
sessions/1/practical_cases/rpn/: rpn.cpp  rpn.hpp  test.cpp
sessions/1/practical_cases/sudoku/: sudoku.cpp  sudoku.hpp
sessions/1_tdd/1/practical_cases/fibonacci/: test.cpp
sessions/1_tdd/1/practical_cases/rpn/: CMakeLists.txt  test.cpp
sessions/1_tdd/2/practical_cases/matrix/: matrix.hpp
sessions/1_tdd/3/: slides.html
sessions/1_tdd/3/practical_cases/console/: CMakeLists.txt
sessions/1_tdd/3/practical_cases/tests/: CMakeLists.txt
sessions/2/: slides.html
sessions/2/practical_cases/interpreter/: interpreter.hpp  test.cpp
sessions/2/practical_cases/matrix/: matrix.cpp  matrix.hpp  test.cpp
sessions/2_genericcpp/1/practical/: practical.cpp
sessions/2_genericcpp/2/: slides.html
sessions/2_genericcpp/2/practical/: CMakeLists.txt
sessions/3/: slides.html
sessions/3/practical_cases/: CMakeLists.txt  logic.cpp  logic.hpp  ranges.hpp  strided_iterator.hpp  types.cpp  types.hpp
sessions/3/practical_cases/console/: console.cpp
sessions/3/practical_cases/tests/: test.cpp
sessions/3_moderncpp/: brainstorm.txt
sessions/3_moderncpp/1/: slides.html
sessions/deck.js/themes/style/: ingima.css
sessions/generic_cpp/1/: slides.html
sessions/generic_cpp/1/practical/: CMakeLists.txt  cpp17.cpp
sessions/genericcpp/1/: slides.html
sessions/genericcpp/1/practical/: CMakeLists.txt  cpp14.cpp  test_cpp14.cpp  test_cpp17.cpp
sessions/genericcpp/2/: slides.html
sessions/genericcpp/2/practical/: CMakeLists.txt  practical.cpp  solution.cpp
sessions/prism.js/: prism.css
sessions/style/: support.css
sessions/tdd/1/: slides.html
sessions/tdd/1/practical_cases/fibonacci/: CMakeLists.txt  fibonacci.cpp  fibonacci.hpp
sessions/tdd/1/practical_cases/rpn/: CMakeLists.txt  (+1 more)
sessions/tdd/2/: slides.html
sessions/tdd/2/practical_cases/: CMakeLists.txt
sessions/tdd/3/practical_cases/: CMakeLists.txt  logic.cpp  strided_iterator.hpp  types.cpp  types.hpp
sessions/themes/: ingima.css  ingima2.css  prism.css
sessions/tmp/sudoku/: CMakeLists.txt  sudoku.cpp  test.cpp
slides/forma1/: sess1.html  sess3.html
slides/forma2/: sess1.html  sess2.html
slides/forma3/: brainstorm.txt  sess1.html  sess2.html
slides/media/: background.xcf
tests/: CMakeLists.txt  attributes.cpp  deduced_return_type.cpp  heterogeneous_lookup.cpp  user_defined_literals.cpp
(+8 files in other folders)
